--- a/frontend/src/pages/Profile/style.css
+++ b/frontend/src/pages/Profile/style.css
@@ -59,12 +59,23 @@
 
 }
 
+.profile-container ul li p{
+  padding-left: 24px;
+}
+.profile-container ul li a{
+  padding-left: 24px;
+}
+.profile-container ul li button{
+  margin-left: 24px;
+}
+
+
 .profile-container .trash{
   position: absolute;
   right: 24px;
   top: 24px;
   border: 0;
-  background-color: rgb(32, 32, 36);
+  background: none;
 }
 
 .profile-container .trash:hover{
@@ -76,7 +87,7 @@
   right: 60px;
   top: 24px;
   border: 0;
-  background-color: rgb(32, 32, 36);
+  background: none;
 }
 
 .profile-container .edit:hover{
@@ -114,7 +125,7 @@
 .profile-container .buttonGoal{
   height: 30px;
   width: 90px;
-  background-color: #141414;
+  background: none;
   border-radius: 10px;
   border-color: #04D361;
   color: #04D361;
@@ -130,4 +141,14 @@
 
 .my-modal .modal-content {
   background: rgb(32, 32, 36)
+}
+
+.profile-container .deleteTech{
+  display: flex;
+  align-items: center;
+}
+.profile-container .deleteTech button{
+  margin-bottom: 15px;
+  border: 0;
+  background: none;
 }
