--- a/frontend/src/pages/Profile/style.css
+++ b/frontend/src/pages/Profile/style.css
@@ -154,20 +154,19 @@
 }
 
 .profile-container .imagensProjeto img{
-  max-width: 200px;
-  max-height: 125px;
+  width: 200px;
+  height: 125px;
 
 }
 .profile-container .imagensProjeto video{
   width: 200px;
-  height: 125px; 
-
+  height: 125px;
 }
 
 .profile-container .imagensProjeto ul{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
+  grid-gap: 25px;
   list-style: none;
 }
 
@@ -177,6 +176,33 @@
   margin: 0px;
   border-radius: 8px;
   position: relative;
+  width: 100%;
+  height: 100%;
 
 }
 
+.profile-container .imagensProjeto .add{
+  background: linear-gradient(134.38deg, rgb(32, 32, 36) 13.32%, rgba(32, 32, 36, 0) 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+}
+.profile-container .imagensProjeto .add button{
+  
+  background: none;
+  border:none;
+  margin: 0 auto;
+  padding: 0 auto;
+  
+}
+
+.botaoMidia{
+  position: absolute;
+  right: 13px;
+  background-color: rgb(32, 32, 36);
+  border: none;
+  display: block;
+  z-index: 1;
+}
